--- a/highscores.html
+++ b/highscores.html
@@ -10,11 +10,12 @@
   </head>
 
   <body>
+    <div>
     <div class="wrapper">
       <h1>Highscores</h1>
-      <ol id="highscores"></ol>
+      <ol id="highscoresList"></ol>
 
-      <a href="./index.html"><button>Go Back</button></a>
+      <a href="./index.html" id="#backBtn"><button>Go Back</button></a>
       <button id="clear">Clear Highscores</button>
     </div>
 
