--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
       <!--- All choides -->
       <div>
         <ol id="optionList" class="hide">
-          <button onclick="checkAnswer(1)"><li class="choice_que" id="option1"></li> </button>
-          <button onclick="checkAnswer(2)"><li class="choice_que" id="option2"></li></button>
-          <button onclick="checkAnswer(3)"><li class="choice_que" id="option3"></li></button>
-          <button onclick="checkAnswer(4)"><li class="choice_que" id="option4"></li></button>
+          <button onclick="checkAnswer(1)"><ul class="choice_que" id="option1"></ul> </button>
+          <button onclick="checkAnswer(2)"><ul class="choice_que" id="option2"></ul></button>
+          <button onclick="checkAnswer(3)"><ul class="choice_que" id="option3"></ul></button>
+          <button onclick="checkAnswer(4)"><ul class="choice_que" id="option4"></ul></button>
         </ol>
       </div>
 
